# MeeNews

./: .gitignore  LICENSE  main.py  openapi.json  pyproject.toml
admin-web/: README.md  package.json
api/docs/: openapi.json  openapi.yaml
docs/: docker-compose.yml  功能详细设计.md  后端设计文档.md  思维导图.md  羊咩快报数据库设计.puml  羊咩快报核心实体关系.puml
server/: db.sqlite3
server/apps/ai/: models.py  serializers.py  tests.py  urls.py  views.py
server/apps/authentication/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
server/apps/community/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/apps/content/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
server/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/server/: settings.py  urls.py
uniapp_meenews/: App.vue  README.md  main.js  manifest.json  package-lock.json  package.json  pages.json  uni.scss
uniapp_meenews/.cursor/rules/: uniapp.mdc
uniapp_meenews/api/: ai.js  content.js  player.js  user.js
uniapp_meenews/common/: fui-app.css
uniapp_meenews/components/ai/: AiEmotion.vue  AiRecommend.vue  AiSummary.vue  AiTTSPlayer.vue
uniapp_meenews/store/: app.js  content.js  player.js  user.js
uniapp_meenews/utils/: contentValidator.js  format.js  request.js  tts.js
uniapp_meenews/项目TODO/: AI内容生成数据流程.puml  API设计文档.md  Django-TODO.md  Django后端API接口设计.md  README_PlantUML.md  TODO.md  UniApp前端页面设计.md  Uniapp-TODO.md  Update.md  前端设计文档.md  常用回复.md  数据库设计文档.md  测试策略和用例设计.md  羊咩快报数据库分层架构.puml  需求文档.md
(+96 files in other folders)
